--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -2,7 +2,7 @@
 
 .form-search {
     position: relative;
-    margin-top: 11px;
+    margin-top: 25px;
     line-height: 22.85px;
     // width: 303px;
     &-input {
