--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -6,9 +6,15 @@
         justify-content: space-between;
         align-items: center;
 
-        .company-logo img {
-            margin: auto 0;
-            max-width: 100%;
+        .company-logo { 
+            vertical-align: middle;
+            a {
+                display: block;
+            }
+            img {
+                margin: auto;
+                max-width: 100%;
+            }
         }
 
         .buttons {
@@ -33,9 +39,18 @@
                 }
                 &.btn-call span{
                     font-size: 32px;
+                    padding: 0;
                 }
             }
-            
+        }
+
+        @include mq('sm') {
+            & > * {
+                vertical-align: middle;
+            }
+            .buttons *{
+                margin-left: 0;
+            }
         }
     }
 }
